# drug_stack

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: further-reading.md  glossary.md  index.md
docs/admet-tox/: absorption.md  bbb.md  distribution.md  excretion.md  index.md  metabolism.md  safety.md  toxicity.md
docs/ai/: classical-ml.md  deep-learning.md  evaluation.md  foundation-models.md  generative-models.md  index.md  protein-models.md  regulatory.md  uncertainty.md
docs/clinical/: biomarkers.md  index.md  preclinical.md  regulatory.md  stratification.md  trials.md
docs/computing/: cloud.md  containers.md  dependencies.md  gpus.md  hpc-slurm.md  index.md  python-stack.md  rdkit-openmm.md  reproducibility.md
docs/data-engineering/: assay-data.md  cheminformatics-pipelines.md  dag.md  five-pillars.md  foundations.md  hpc-to-industry.md  index.md  lakehouse.md  mlops.md  testing.md
docs/fundamentals/: admet-overview.md  biological-targets.md  disease-biology.md  drug-modalities.md  index.md  medicinal-chemistry.md  pharmacology.md  pipeline.md
docs/getting-started/: first-figure.md  first-screen.md  first-smiles.md  index.md  install.md
docs/landmark/: atlases.md  datasets.md  index.md  papers.md  pipelines.md
docs/molecular-design/: descriptors.md  docking.md  free-energy.md  generative.md  index.md  mpo.md  qsar.md  representations.md  structure-based.md
docs/paths/: index.md
docs/repurposing/: index.md  knowledge-graphs.md  rwe.md  signature-based.md
docs/screening/: active-learning.md  hit-triage.md  index.md  ligand-based.md  structure-based.md  ultra-large.md
docs/target-id/: druggability.md  genomics.md  index.md  literature.md  networks.md  proteomics.md  transcriptomics.md  validation.md
docs/tools/: index.md
docs/tutorials/: capstone.md  docking-walkthrough.md  generative-design.md  index.md  qsar-walkthrough.md  similarity-search.md  target-id.md
src/drug_handbook/: __init__.py  (+1 more)
tests/: test_smoke.py
(+11 files in other folders)
