[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "drug-handbook"
version = "0.1.0"
description = "DrugStack — the open drug-discovery and -development handbook. Fundamentals, target ID, molecular design, screening, ADMET, repurposing, clinical, AI/ML, data engineering, computing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DrugStack contributors" }]
keywords = [
    "drug-discovery",
    "drug-development",
    "cheminformatics",
    "rdkit",
    "qsar",
    "virtual-screening",
    "admet",
    "generative-chemistry",
    "data-engineering",
    "mlops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
chem = [
    "rdkit>=2024.03",
    "numpy>=1.26",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/phindagijimana/drug_stack"
Documentation = "https://phindagijimana.github.io/drug_stack/"
Source = "https://github.com/phindagijimana/drug_stack"

[project.scripts]
drug-handbook = "drug_handbook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drug_handbook"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
